--- a/templates/register.html
+++ b/templates/register.html
@@ -1,33 +1,51 @@
-<!-- Begin page content -->
-{% block content %}
-<div>
-    <h1>Registration</h1>
-        <div>
-            {{ form.username.label }} {{ form.username(size=32) }}
-            {% for error in form.username.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type='text/css' href="{{url_for('static', filename='css/register.css')}}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <title>Регистрация</title>
+</head>
+<body>
+    <!-- Begin page content -->
+    <div class="wrapper">
+        <div class="container">
+            <h1>Регистрация</h1>
+            {% block content %}
+            <div class="forms_container">
+                <div>
+                    {{ form.username.label }} {{ form.username(size=32) }}
+                    {% for error in form.username.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                <div>
+                    {{ form.email.label }} {{ form.email(size=32) }}
+                    {% for error in form.email.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                <div>
+                    {{ form.password.label }} {{ form.password(size=32) }}
+                    {% for error in form.password.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                <div>
+                    {{ form.confirm_password.label }} {{ form.confirm_password(size=32) }}
+                    {% for error in form.confirm_password.errors %}
+                    <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+            </div>
+            <div>
+                    {{ form.submit() }}
+                </div>
+            {% endblock %}
         </div>
-        <div>
-            {{ form.email.label }} {{ form.email(size=32) }}
-            {% for error in form.email.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </div>
-        <div>
-            {{ form.password.label }} {{ form.password(size=32) }}
-            {% for error in form.password.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </div>
-        <div>
-            {{ form.confirm_password.label }} {{ form.confirm_password(size=32) }}
-            {% for error in form.confirm_password.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </div>
-        <div>
-            {{ form.submit() }}
-        </div>
-</div>
-{% endblock %}
+    </div>    
+</body>
+</html>
