--- a/templates/register.html
+++ b/templates/register.html
@@ -1,51 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type='text/css' href="{{url_for('static', filename='css/register.css')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <title>Регистрация</title>
+
 </head>
 <body>
+<form action="" method="post">
+    {{ form.hidden_tag() }}
     <!-- Begin page content -->
     <div class="wrapper">
         <div class="container">
             <h1>Регистрация</h1>
-            {% block content %}
             <div class="forms_container">
-                <div>
-                    {{ form.username.label }} {{ form.username(size=32) }}
+                <p>
+                    {{ form.username.label }}
+                    {{ form.username(class="form-control", type="username") }}
                     {% for error in form.username.errors %}
-                    <span style="color: red;">{{ error }}</span>
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
                     {% endfor %}
-                </div>
-                <div>
-                    {{ form.email.label }} {{ form.email(size=32) }}
+                </p>
+                <p>
+                    {{ form.email.label }}
+                    {{ form.email(class="form-control", type="email") }}
                     {% for error in form.email.errors %}
-                    <span style="color: red;">{{ error }}</span>
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
                     {% endfor %}
-                </div>
-                <div>
-                    {{ form.password.label }} {{ form.password(size=32) }}
+                </p>
+                <p>
+                    {{ form.password.label }}
+                    {{ form.password(class="form-control", type="password") }}
                     {% for error in form.password.errors %}
-                    <span style="color: red;">{{ error }}</span>
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
                     {% endfor %}
-                </div>
-                <div>
-                    {{ form.confirm_password.label }} {{ form.confirm_password(size=32) }}
+                </p>
+                <p>
+                    {{ form.confirm_password.label }}
+                    {{ form.confirm_password(class="form-control", type="confirm_password") }}
                     {% for error in form.confirm_password.errors %}
-                    <span style="color: red;">{{ error }}</span>
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
                     {% endfor %}
-                </div>
+                </p>
             </div>
-            <div>
-                    {{ form.submit() }}
-                </div>
-            {% endblock %}
+            <p>
+                {{ form.submit(type="submit") }}
+            </p>
+            <div>{{ message }}</div>
         </div>
-    </div>    
+    </div>
+    </form>
 </body>
 </html>
