--- a/templates/login.html
+++ b/templates/login.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type='text/css' href="{{url_for('static', filename='css/register.css')}}">
+    <link rel="stylesheet" type='text/css' href="{{url_for('static', filename='css/login.css')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <title>Авторизация</title>
 
@@ -16,34 +15,34 @@
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <div class="wrapper">
-        <div class="container">
-            <h1>Авторизация</h1>
-            <div class="forms_container">
-        <p>
-            {{ form.email.label }}<br>
-            {{ form.email(class="form-control", type="email") }}<br>
-            {% for error in form.email.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
+            <div class="container">
+                <h1>Авторизация</h1>
+                <div class="forms_container">
+                    <p>
+                        {{ form.email.label }}
+                        {{ form.email(class="form-control", type="email") }}
+                        {% for error in form.email.errors %}
+                            <div class="alert-danger" role="alert">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </p>
+                    <p>
+                        {{ form.password.label }}
+                        {{ form.password(class="form-control", type="password") }}
+                        {% for error in form.password.errors %}
+                            <div class="alert-danger" role="alert" style="color:red;">
+                                {{ error }}
+                            </div>
+                        {% endfor %}
+                    </p>
                 </div>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(class="form-control", type="password") }}<br>
-            {% for error in form.password.errors %}
-                <div class="alert alert-danger" role="alert">
-                    {{ error }}
-                </div>
-            {% endfor %}
-        </p>
+                <p>
+                    {{ form.submit(type="submit") }}
+                </p>
+                <div>{{ message }}</div>
+            </div>
         </div>
-            <p>
-                {{ form.submit(type="submit") }}
-            </p>
-            <div>{{ message }}</div>
-        </div>
-    </div>
     </form>
 </body>
 </html>
