--- a/static/css/register.css
+++ b/static/css/register.css
@@ -21,10 +21,10 @@ h1 {
 	background: #21273D;
 	display: block;
 	color: #fff;
-	padding: 20px 20px 40px 20px;
+	padding: 20px 20px 20px 20px;
 	border-radius: 55px;
 	text-align: center;
-	width: 30%;
+	width: 400px;
 }
 
 .forms_container label {
@@ -38,8 +38,8 @@ h1 {
 
 .forms_container input {
 	width: 90%;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 	border-radius: 10px;
 }
 
@@ -48,12 +48,19 @@ h1 {
 	font-size: 20px;
 	background: #A3CEF1;
 	width: 90%;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 	border-radius: 10px;
 	color: #F1F6F8;
 	font-family: "Ubuntu", sans-serif;
 	font-weight: 700;
 	font-style: normal;
 	margin-top: 20px;
+}
+
+.city_list {
+	width: 90%;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-radius: 10px;
 }
