--- a/templates/register.html
+++ b/templates/register.html
@@ -33,7 +33,7 @@
                     {{ form.email.label }}
                     {{ form.email(class="form-control", type="email") }}
                     {% for error in form.email.errors %}
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert-danger" role="alert">
                         {{ error }}
                     </div>
                     {% endfor %}
@@ -42,7 +42,7 @@
                     {{ form.password.label }}
                     {{ form.password(class="form-control", type="password") }}
                     {% for error in form.password.errors %}
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert-danger" role="alert">
                         {{ error }}
                     </div>
                     {% endfor %}
@@ -51,11 +51,15 @@
                     {{ form.confirm_password.label }}
                     {{ form.confirm_password(class="form-control", type="confirm_password") }}
                     {% for error in form.confirm_password.errors %}
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert-danger" role="alert">
                         {{ error }}
                     </div>
                     {% endfor %}
                 </p>
+                <p>
+                    {{ form.list.label }}
+                    {{ form.list(class="city_list") }}
+                </p>    
             </div>
             <p>
                 {{ form.submit(type="submit") }}
