--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
         <div class="weather_block">
             <div class="wrapper">
                 <div class="container">
+                    <h1>{{ city }}</h1>>
                     {% if 0 <= weather['weather_code'] <= 4 %}
                         <img src="{{url_for('static', filename='images/weather_pack/cloudy-forecast-sun-svgrepo-com.svg')}}" alt="" class="weather_pic">
                     {% elif 5 <= weather['weather_code'] <= 12 or 18 <= weather['weather_code'] <= 19 or 30 <= weather['weather_code'] <= 35 or 40 <= weather['weather_code'] <= 49 %}
@@ -57,63 +58,43 @@
                     </p>
                     {% elif 5 <= weather['weather_code'] <= 12 or 18 <= weather['weather_code'] <= 19 or 30 <= weather['weather_code'] <= 35 or 40 <= weather['weather_code'] <= 49 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            На улице туман или ветер с пылью, не забудь головной убор.
                         </p>
                     {% elif weather['weather_code'] == 13 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            На улице молнии, не купайся на открытом пространостве и держись дальше от одиночных деревьев!
                         </p>
                     {% elif 14 <= weather['weather_code'] <= 21 or 60 <= weather['weather_code'] <= 69 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            На улице идёт дождь! Бери зонтик, а лучше посмотри хороший фильм дома, чтобы не заболеть)
                         </p>
-                    {% elif weather['weather_code'] == 22 %}
+                    {% elif weather['weather_code'] == 22 or 36 <= weather['weather_code'] <= 39 or 70 <= weather['weather_code'] <= 79 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            Снег. Оденься потеплее и возьми перчатки.
                         </p>
                     {% elif 36 <= weather['weather_code'] <= 39 or 70 <= weather['weather_code'] <= 79 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            Куртка, шарф, шапка. И штаны не забудь!!!
                         </p>
                     {% elif 23 <= weather['weather_code'] <= 26 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            Куртка, шарф, шапка. И штаны не забудь!!!
                         </p>
                     {% elif 27 <= weather['weather_code'] <= 28 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            Ожидается град, будь аккуратен, лучше не идти пешком, а поехать!
                         </p>
                     {% elif weather['weather_code'] == 29 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            На улице гроза, если нужно на улицу, то возьми зонтик или дождевик.
                         </p>
                     {% elif 50 <= weather['weather_code'] <= 59 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            На улице мороз, одевайся теплее.
                         </p>
                     {% elif 80 <= weather['weather_code'] <= 99 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            На улице осадки и одевайся теплее!
                         </p>
                     {% endif %}
                 </div>
