--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,8 @@
                             На улице осадки и одевайся теплее!
                         </p>
                     {% endif %}
+            <a href="/settings" class="logout_btn">Настройки</a>
+
                 </div>
             </div>
         </footer>   
