--- a/templates/login.html
+++ b/templates/login.html
@@ -42,6 +42,8 @@
                 </p>
                 <div>{{ message }}</div>
             </div>
+            <a href="/register" class="logout_btn">Регистрация</a>
+
         </div>
     </form>
 </body>
