design settings positioning settings button in index done presentation designed register and login links done requirements

--- a/templates/login.html
+++ b/templates/login.html
@@ -40,10 +40,9 @@
                 <p>
                     {{ form.submit(type="submit") }}
                 </p>
+                <a href="/register" class="register">Регистрация</a>
                 <div>{{ message }}</div>
             </div>
-            <a href="/register" class="logout_btn">Регистрация</a>
-
         </div>
     </form>
 </body>
