--- a/templates/register.html
+++ b/templates/register.html
@@ -60,12 +60,11 @@
                     {{ form.list.label }}
                     {{ form.list(class="city_list") }}
                 </p>
-            <a href="/login" class="logout_btn">Войти</a>
-
             </div>
             <p>
                 {{ form.submit(type="submit") }}
             </p>
+            <a href="/login" class="login">Войти</a>
             <div>{{ message }}</div>
         </div>
     </div>
