changed one of the coments to weather

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,7 @@
                 <div class="footer_container">
                     {% if 0 <= weather['weather_code'] <= 4 %}
                         <p>
-                            Сегодня отличная погода. Советую надеть футболку,
-                            шорты или штаны. Можно обуть кроссовки или кеды.
-                            Также можешь взять кепку или панамку.
+                            Сегодня облачно. Отличный день, чтобы сходить куда-нибудь!
                         </p>
                     {% elif 5 <= weather['weather_code'] <= 12 or 18 <= weather['weather_code'] <= 19 or 30 <= weather['weather_code'] <= 35 or 40 <= weather['weather_code'] <= 49 %}
                         <p>
